# education_robotics

./: .gitignore  CMakeLists.txt  README.md  package.xml  useful commands.txt
config/: education_robotics_rqt.perspective
docs/source/: conf.py  contact.rst  description.rst  index.rst  installation.rst  navigation.rst  questions.rst  tutorials.rst
launch/: camera_calibration.launch  demo_robot_map.launch  demo_robot_simple.launch  first_robot.launch  tutorials_navigation.launch  tutorials_obstacle_avoidance.launch  tutorials_robot_to_marker.launch  tutorials_test_figures.launch
simulation/models/: building_floor.dae
simulation/worlds/: demo_map.world  demo_map_v1.world  demo_only_robot.world  robot_box.world
src/: camera_processing_example.py  move_robot_example.py  robot_map_example.py  robot_move_example.py  robot_update_map.py
src/gazebo_plugins/: robot_ros_diff_drive.cpp  robot_ros_utils.cpp
src/tutorials/: 1_basic_figures.py  2_navigation.py  3_obstacle_avoidance.py  4_robot_to_marker.py  RobotController.py
