<?xml version="1.0"?>
<package>
    <name>education_robotics</name>
    <version>0.0.0</version>
    <description>The education_robotics package</description>

    <maintainer email="garciar@rhrk.uni-kl.de">Francisco J. Garcia R.</maintainer>
    <maintainer email="turnwald@eit.uni-kl.de">M. Sc. Alen Turnwald</maintainer>

    <license>GPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>std_msgs</run_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>